fix: correção do teste unitário da sugestão de produção  (produtos de maior valor)